--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 data
 .ipynb_checkpoints/
 src/__pycache__/
-src/__pycache__/read_weather.cpython-36.pyc
+read_weather.cpython-36.pyc
 *.log
-*.pyc 
+*.pyc
+__pycache__/
